iacta and sca user model added

--- a/app/views/gmail_mailer/index.html.haml
+++ b/app/views/gmail_mailer/index.html.haml
@@ -114,6 +114,8 @@
       %option{:value => "justdial"} Just Dial
       %option{:value => "buzz4health"} Buzz4health User
       %option{:value => "reference"} Reference Database
+      %option{:value => "iactauser"} IACTA User
+      %option{:value => "scauser"} SCA User
   .col-xs-12{:style => "width:auto; float:right; margin:0 12px 12px 0;"}
     %select{:name => "type_country"}
       %option{:value => "India"}India
