--- a/app/views/gmail_mailer/index.html.haml
+++ b/app/views/gmail_mailer/index.html.haml
@@ -169,6 +169,11 @@
               %input.form-control{:name => "Image_url", :placeholder => "Enter Image Url", :type => "text"}
                 %center
         .space-12
+        .row
+          .col-xs-offset-1{:style => "float:right;width:50%;"}
+            %input{:name => "bajaj_notif", :type => "checkbox", :value => "send_notif_bajaj"}
+              Include Bajaj in campaign
+              %br
         .form-group
           %center
             %button#active_user_campaign.btn.btn-sm.btn-danger{:onclick => "return confirm('Are you really sure you want to send this out')", :type => "submit"}
