Updated list of specializations as B4h user data is updated

--- a/app/views/gmail_mailer/index.html.haml
+++ b/app/views/gmail_mailer/index.html.haml
@@ -1,3 +1,7 @@
+- specializations = ["Other", "Emergency Medicine", "Anatomy", "Nursing Professional", "Microbiology", "Gastroenterology", "Anasthesia & Critical Care Medicine", "General Pediatrics", "Cardiology", "Radiology", "Cosmetic Dentistry", "Psychiatry", "Orthopedics", "Physiotherapy", "Pathology", "Preventive Medicine", "Obstetrics & Gynecology", "Critical Care & ICU", "Neurology", "Dermatology", "General Surgery", "Cardiac Anasthesiology", "Nephrology", "Internal Medicine", "Forensic Medicine", "Gastrosurgery", "Thoracic Surgery", "Medical Oncology", "Audiometry", "Bariatric Surgery", "General Dentistry", "Otorhinolaryngology(ENT)", "Oral and Maxillofacial Surgery", "General Medicine (MBBS)", "Family Medicine", "Rheumatology", "Clinical Hematology", "Dentistry", "Hematopathology", "Infectious Diseases", "Ophthalmology", "CTVS", "Pediatric Surgery", "Anasthesiology", "Psychology", "Public health Dentistry", "Periodontics", "Speech Therapy", "Neonatology", "Respiratory Medicine", "Radiation Oncology", "Pharmacology", "Aesthetic & Reconstructive Surgery", "Laser Dentistry", "Neurosurgery", "Medicine", "Oral Medicine & Radiology", "Internal Medicine (MD)", "Oral pathology", "Endodontics & Conservative Dentistry", "Urology/Kidney Transplant", "Gynecological Oncology", "Endocrinology", "General Anasthesiology", "Cardiothoracic Surgery", "Orthodontics", "Surgery", "Implantology", "Neuro Anasthesiology", "Hemato-oncology", "Vascular Surgery", "Anaesthesiology", "Cardiac Sciences", "Pedodontics", "Laparoscopic/Minimal Access Surgery", "Clinical Immunology", "Geriatric Medicine", "Pediatrics", "Pediatric Gastroenterology", "Gasteroenterology", "Pediatric Anasthesiology", "Pediatric Oncology", "Hepatology", "Prosthodontics", "Virology", "Pediatric Dentistry", "Other Healthcare Professional", "Interventional Cardiology", "Physiology", "Preventive and Social Medicine", "Paramedical", "Pediatric Hematology", "Pediatric Cardiac Surgery", "Pediatric Cardiology", "Public Health", "Pediatric Urology", "Otorhinolaryngology(Ent)", "Reproductive Medicine", "Pediatric Neurology", "Rheumatologist", "General Physician", "Surgical Oncology", "Robotic Surgery", "Adolescent Medicine", "Neuro Physiotherapist", "Pediatrician", "Consultant Physiotherapist", "Radiologist", "Cardiac Surgeon", "Ayurveda", "Consultant Physician", "Diabetologist", "Cardiologist", "Joint Replacement Surgeon", "Occupational Therapist", "physician", "Pulmonology", "Radiation Oncologist", "Diabetes", "Abdominoplasty", "Diabetelogy", "Implantologist", "Endodontist", "Cosmetic/Aesthetic Dentist", "Pediatric Intensive Care", "General Medicine (Mbbs)", "mba in hospital", "Oral Medicine in Radiology", "Medical Resident", "Pariodontics", "hnnhh", "General medicine", "Student", "General medecine", "Biochemistry", "General medicine ", "Aaaa", "Pharmacist", "other", "Pediatrician ", "pediatric intensivist", "Persuing DM Neurology course", "None", "Gynaecologic Oncology", "Ophthalmology ", "Bio-chemistry", "Community Medicine", "Orthopaedic ", "Pediatric ", "Radiodiagnosis ", "Administration", "Radiodiagnosis", "Anaesthesia", "Community Meddicine", "ENT", "Orthopaedics", "Clinical and onco-cytogenetics, genetic counseling, quality assurance and control", "General Medicine", "Anesthesiologist", "Cardiothoracic Surgeon", "Critical Care Medicine", "Anesthesiology", "Trending", "Cardiac Electrophysiology", "CERTIFIATE COURSE ON DIABETES", "neuroradiology", "Family/General practice", "Emergency medicine", "Hematology & Oncology", "Internist or Critical Care", "Homeopath", "Endocrinology/Diabetes", "Infectious disease", "Trichology", "Urology", "Paediatric Intensivist", "Asthma", "Oncology", "Palliative Medicine", "Geriatric Physiotherapist", "GastroIntestinal Surgery", "Dentofacial Orthopedist", "Dermatosurgery", "Aesthetic Dermatology", "Pediatric Dermatologist", "Dermatopathologist", "Neurorehabilitation", "Pain Treatment", "Neuropkasticity", "FAMILY PHYSICIAN", "Orthopedic Surgeon", "Family Physician", "Pediatric Nephrology", "Critical Care & Icu", "Dietitian/Nutritionist", "Healthcare and Hospital Management", "MBA in health and hospital", "Dentist", "Microbiology Biomedical science", "Gynaecology", "Spine Surgeon", "Researcher", "Biomedical science", "Cardiothoracic & Vascular Surgery", "Sports Medicine Surgeon", "Orthopedist", "General Surgeon", "Podiatrist", "Cardio-Thoracic Surgery", "Oral Surgeon", "Neuro-Oncologist", "Acupuncturist", "Homeopathy", "Pulmonologist", "Plastic Surgery", "ENT Surgeon", "Pulmonary Medicine", "Oral And Maxillofacial Surgeon", "Gynecologist", "Dental Surgeon", "Gastroenterologist", "Oral Pathologist", "Sexologist", "Pediatric Neurologist", "Adolescent And Child Psychiatrist", "Adult Congenital Cardiologist", "Sports and Musculoskeletal Physiotherapist", "Pediatric Cardiologist", "Sonologist", "Ophthalmologist/ Eye Surgeon", "Naturopathy", "Cosmetologist", "Aesthetic Surgeon", "Addiction Psychiatrist", "Neurologist", "Occupational Therapy", "Neuropsychiatrist", "Obesity Specialist", "Physiotherapist", "Allergy", "Neonatalogist", "Neurosurgeon", "Hematologist", "Clinical Physiotherapist", "Cardiovascular And Pulmonary Physiotherapist", "Internal Medicine(Others)", "Interventional Cardiologist", "Gastroenterohepatology", "Community Dentistry", "Homecare Physiotherapist", "student", "Oral And Maxillofacial Surgery", "NA", "General surgery", "Pediatric Hepatology", "Optometrist", "Infertility Specialist", "Infertility", "Gastrointestinal Surgery", "Venereologist", "Oncologist/Cancer Specialist", "Nuclear Medicine Physician", "ms", "Alternative Medicine", "ENT/ Otolaryngologist", "Beautician", "Epidemiologist", "Psychiatrist", "Adult Psychiatrist", "Urologist", "Yoga", "Pediatric Gastroenterologist", "Psychotherapist", "oncology", "Pediatric Psychiatry", "Pediatric OT", "Genetics", "Ultra Sonography", "Nephrologist/Renal Specialist", "Veterinary medicine "]
+- specializations = specializations.sort
+- specializations << "testing"
+
 %link{:href => "http://cdn.rawgit.com/davidstutz/bootstrap-multiselect/master/dist/css/bootstrap-multiselect.css", :rel => "stylesheet", :type => "text/css"}/
 %script{:src => "http://cdn.rawgit.com/davidstutz/bootstrap-multiselect/master/dist/js/bootstrap-multiselect.js", :type => "text/javascript"}
 %h1
@@ -7,107 +11,9 @@
   .col-xs-12{:style => "float:right;width:25%;"}
     %input.form-control{:name => "password", :placeholder => "Enter Password..", :type => "password"}/
   %select#lstFruits{:multiple => "multiple", :name => "specialization[]"}
-    %option{:value => "Anaesthesiology"} Anaesthesiology
-    %option{:value => "Anasthesia & Critical Care Medicine"} Anasthesia  Critical Care Medicine
-    %option{:value => "Anasthesiology"} Anasthesiology
-    %option{:value => "Anatomy"} Anatomy
-    %option{:value => "Audiometry"} Audiometry
-    %option{:value => "Bariatric Surgery"} Bariatric Surgery
-    %option{:value => "CTVS"} CTVS
-    %option{:value => "Cardiac Anasthesiology"} Cardiac Anasthesiology
-    %option{:value => "Cardiac Electrophysiology"} Cardiac Electrophysiology
-    %option{:value => "Cardiology"} Cardiology
-    %option{:value => "Cardiothoracic Surgery"} Cardiothoracic Surgery
-    %option{:value => "Clinical Immunology"} Clinical Immunology
-    %option{:value => "Cosmetic Dentistry"} Cosmetic Dentistry
-    %option{:value => "Critical Care & ICU"} Critical Care  ICU
-    %option{:value => "Dentistry"} Dentistry
-    %option{:value => "Dermatology"} Dermatology
-    %option{:value => "Emergency Medicine"} Emergency Medicine
-    %option{:value => "Endocrinology"} Endocrinology
-    %option{:value => "Endodontics & Conservative Dentistry"} Endodontics  Conservative Dentistry
-    %option{:value => "Family Medicine"} Family Medicine
-    %option{:value => "Forensic Medicine"} Forensic Medicine
-    %option{:value => "Gasteroenterology"} Gasteroenterology
-    %option{:value => "Gastroenterology"} Gastroenterology
-    %option{:value => "Gastrosurgery"} Gastrosurgery
-    %option{:value => "General Anasthesiology"} General Anasthesiology
-    %option{:value => "General Dentistry"} General Dentistry
-    %option{:value => "General Medicine (MBBS)"} General Medicine (MBBS)
-    %option{:value => "General Pediatrics"} General Pediatrics
-    %option{:value => "General Surgery"} General Surgery
-    %option{:value => "Genetics"} Genetics
-    %option{:value => "Geriatric Medicine"} Geriatric Medicine
-    %option{:value => "Gynecological Oncology"} Gynecological Oncology
-    %option{:value => "Hemato-oncology"} Hemato-oncology
-    %option{:value => "Hematology"} Hematology
-    %option{:value => "Hepatology"} Hepatology
-    %option{:value => "Implantology"} Implantology
-    %option{:value => "Infectious Diseases"} Infectious Diseases
-    %option{:value => "Internal Medicine"} Internal Medicine
-    %option{:value => "Internal Medicine (MD)"} Internal Medicine (MD)
-    %option{:value => "Interventional Cardiology"} Interventional Cardiology
-    %option{:value => "Laser Dentistry"} Laser Dentistry
-    %option{:value => "Medical Oncology"} Medical Oncology
-    %option{:value => "Medicine"} Medicine
-    %option{:value => "Microbiology"} Microbiology
-    %option{:value => "Neonatology"} Neonatology
-    %option{:value => "Nephrology"} Nephrology
-    %option{:value => "Neuro Anasthesiology"} Neuro Anasthesiology
-    %option{:value => "Neurology"} Neurology
-    %option{:value => "Neurosurgery"} Neurosurgery
-    %option{:value => "Nursing Professional"} Nursing Professional
-    %option{:value => "Obstetrics & Gynecology"} Obstetrics  Gynecology
-    %option{:value => "Ophthalmology"} Ophthalmology
-    %option{:value => "Oral Medicine in Radiology"} Oral Medicine in Radiology
-    %option{:value => "Oral and Maxillofacial Surgery"} Oral and Maxillofacial Surgery
-    %option{:value => "Oral pathology"} Oral pathology
-    %option{:value => "Orthodontics"} Orthodontics
-    %option{:value => "Orthopedics"} Orthopedics
-    %option{:value => "Other"} Other
-    %option{:value => "Otorhinolaryngology(ENT)"} Otorhinolaryngology(ENT)
-    %option{:value => "Palliative Medicine"} Palliative Medicine
-    %option{:value => "Paramedical"} Paramedical
-    %option{:value => "Pathology"} Pathology
-    %option{:value => "Pediatric Anasthesiology"} Pediatric Anasthesiology
-    %option{:value => "Pediatric Cardiac Surgery"} Pediatric Cardiac Surgery
-    %option{:value => "Pediatric Cardiology"} Pediatric Cardiology
-    %option{:value => "Pediatric Dentistry"} Pediatric Dentistry
-    %option{:value => "Pediatric Gastroenterology"} Pediatric Gastroenterology
-    %option{:value => "Pediatric Hematology"} Pediatric Hematology
-    %option{:value => "Pediatric Hepatology"} Pediatric Hepatology
-    %option{:value => "Pediatric Intensive Care"} Pediatric Intensive Care
-    %option{:value => "Pediatric Nephrology"} Pediatric Nephrology
-    %option{:value => "Pediatric Neurology"} Pediatric Neurology
-    %option{:value => "Pediatric Oncology"} Pediatric Oncology
-    %option{:value => "Pediatric Psychiatry"} Pediatric Psychiatry
-    %option{:value => "Pediatric Surgery"} Pediatric Surgery
-    %option{:value => "Pediatric Urology"} Pediatric Urology
-    %option{:value => "Pediatrics"} Pediatrics
-    %option{:value => "Pedodontics"} Pedodontics
-    %option{:value => "Periodontics"} Periodontics
-    %option{:value => "Pharmacology"} Pharmacology
-    %option{:value => "Physiology"} Physiology
-    %option{:value => "Physiotherapy"} Physiotherapy
-    %option{:value => "Preventive Medicine"} Preventive Medicine
-    %option{:value => "Preventive and Social Medicine"} Preventive and Social Medicine
-    %option{:value => "Prosthodontics"} Prosthodontics
-    %option{:value => "Psychiatry"} Psychiatry
-    %option{:value => "Psychology"} Psychology
-    %option{:value => "Public health Dentistry"} Public health Dentistry
-    %option{:value => "Radiation Oncology"} Radiation Oncology
-    %option{:value => "Radiology"} Radiology
-    %option{:value => "Reproductive Medicine"} Reproductive Medicine
-    %option{:value => "Respiratory Medicine"} Respiratory Medicine
-    %option{:value => "Rheumatology"} Rheumatology
-    %option{:value => "Robotic Surgery"} Robotic Surgery
-    %option{:value => "Speech Therapy"} Speech Therapy
-    %option{:value => "Surgical Oncology"} Surgical Oncology
-    %option{:value => "Thoracic Surgery"} Thoracic Surgery
-    %option{:value => "Urology/Kidney Transplant"} Urology/Kidney Transplant
-    %option{:value => "Vascular Surgery"} Vascular Surgery
-    %option{:value => "Virology"} Virology
-    %option{:value => "testing"} testing
+    - specializations.all.each do |spe|
+      %option{:value => "#{spe}"}
+        = spe
   
   .col-xs-12{:style => "width:auto; float:right; margin:0 12px 12px 0;"}
     %select{:name => "type_database"}
