--- a/app/views/gmail_mailer/index.html.haml
+++ b/app/views/gmail_mailer/index.html.haml
@@ -11,7 +11,7 @@
   .col-xs-12{:style => "float:right;width:25%;"}
     %input.form-control{:name => "password", :placeholder => "Enter Password..", :type => "password"}/
   %select#lstFruits{:multiple => "multiple", :name => "specialization[]"}
-    - specializations.all.each do |spe|
+    - specializations.each do |spe|
       %option{:value => "#{spe}"}
         = spe
   
