Added model for IADVL users

--- a/app/views/gmail_mailer/index.html.haml
+++ b/app/views/gmail_mailer/index.html.haml
@@ -23,6 +23,7 @@
       %option{:value => "iactauser"} IACTA User
       %option{:value => "scauser"} SCA User
       %option{:value => "perfusionistuser"} Perfusionist User
+      %option{:value => "iadvl"} IADVL User
   .col-xs-12{:style => "width:auto; float:right; margin:0 12px 12px 0;"}
     %select{:name => "type_country"}
       %option{:value => "India"}India
